# Articles

./: .gitignore  CMakeLists.txt  README.md
Article_StackAllocator/: CMakeLists.txt  README.md
Article_StackAllocator/Sources/: Main.cpp  StackAllocatorGeneric.hpp  StackAllocatorSpecialized.hpp
Article_StringIdentifier/: CMakeLists.txt  README.md
Article_StringIdentifier/Sources/: Main.cpp  StringIdentifier.hpp
