# file      CMakeLists.txt
# project   Articles
# author    Vincent CALISTO (@aredhele33) - https://vincentcalisto.com

SET(ARTICLES_PROJECT_NAME "Articles")
SET(ARTICLES_PROJECT_VERSION_MAJOR 1)
SET(ARTICLES_PROJECT_VERSION_MINOR 0)
SET(ARTICLES_PROJECT_VERSION_PATCH 0)
SET(ARTICLES_PROJECT_CXX_STANDARD  20)

CMAKE_MINIMUM_REQUIRED(VERSION 3.25)
PROJECT(${ARTICLES_PROJECT_NAME})
SET    (VERSION_MAJOR ${ARTICLES_PROJECT_VERSION_MAJOR})
SET    (VERSION_MINOR ${ARTICLES_PROJECT_VERSION_MINOR})
SET    (VERSION_PATCH ${ARTICLES_PROJECT_VERSION_PATCH})
SET    (CMAKE_CXX_STANDARD ${ARTICLES_PROJECT_CXX_STANDARD})

MESSAGE(STATUS "[Articles][Project] ${ARTICLES_PROJECT_NAME} ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")
MESSAGE(STATUS "[Articles][Project] CXX standard : C++${ARTICLES_PROJECT_CXX_STANDARD}")

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    SET(ARTICLES_BUILD_TYPE            "Debug")
    SET(ARTICLES_BUILD_TYPE_DIRECTORY  "Debug")
    SET(ARTICLES_BUILD_TYPE_SUFFIX     "_d")
    MESSAGE(STATUS "[Articles][Project] Detected build type : Debug")

ENDIF()

if(CMAKE_BUILD_TYPE STREQUAL "Release")
    SET(ARTICLES_BUILD_TYPE            "Release")
    SET(ARTICLES_BUILD_TYPE_DIRECTORY  "Release")
    SET(ARTICLES_BUILD_TYPE_SUFFIX     "_r")
    MESSAGE(STATUS "[Articles][Project] Detected build type : Debug")

ENDIF()

# Setting default output directories, examples :
# Binaries/Debug
# Binaries/Release
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Binaries/${ARTICLES_BUILD_TYPE_DIRECTORY}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/Binaries/${ARTICLES_BUILD_TYPE_DIRECTORY}")

# Adding all articles
ADD_SUBDIRECTORY(Article_StackAllocator)
ADD_SUBDIRECTORY(Article_StringIdentifier)
